--- a/style.css
+++ b/style.css
@@ -1,20 +1,25 @@
 * {
   box-sizing: border-box;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   top: 0;
   left: 0;
   right: 0;
   left: 0;
+  background-color: black;
 }
 
-body{
-    margin: 0;
+body {
+  margin: 0;
 }
 
-.container{
-    background-color: black;
-    color: white;
-    border-radius: 20px;
+.container {
+  background-color: black;
+  color: white;
+  border-radius: 20px;
+}
+
+h1{
+    background-color: rgb(7, 133, 133);
 }
 
 .menu {
@@ -25,69 +30,68 @@ body{
   color: black;
   padding: 1rem;
 }
-.list-container{
-    padding: 2rem;
-    margin: 1rem;
+.list-container {
+  padding: 2rem;
+  margin: 1rem;
 }
 
-.search-pane{
-    display: flex;
-    justify-content:space-evenly;
-    align-items: center;
-    background-color: rgb(36,36,36);
-    border: 2px solid rgb(36, 36, 36);
-    border-radius: 5px;
-    padding: 0.5rem;
-    
+.search-pane {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: rgb(36, 36, 36);
+  border: 2px solid rgb(36, 36, 36);
+  border-radius: 5px;
+  padding: 0.5rem;
 }
 
-.search-pane #user-input{
-    margin-right: 1rem;
-    background-color: rgb(36, 36, 36);
-    padding: 0.5rem;
-    border: none;
-    border-right: 2px solid black;
-    color: rgb(255, 255, 255);
+.search-pane #user-input {
+  margin-right: 1rem;
+  background-color: rgb(36, 36, 36);
+  padding: 0.5rem;
+  border: none;
+  border-right: 2px solid black;
+  color: rgb(255, 255, 255);
 }
 
-.search-pane #add{
-    background-color: rgb(36, 36, 36);
-    border: none;
-    padding: 0.5rem;
-    color: rgb(129, 129, 129);
+.search-pane #add {
+  background-color: rgb(36, 36, 36);
+  border: none;
+  padding: 0.5rem;
+  color: rgb(129, 129, 129);
 }
 
-.search-pane #add:hover{
-    color: rgb(33, 164, 194);
+.search-pane #add:hover {
+  color: rgb(33, 164, 194);
 }
 
-ul{
-    margin: 0;
-    padding: 0;
+ul {
+  margin: 0;
+  padding: 0;
 }
 
-li{
-    list-style-type: none;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 1.5rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    background-color: rgb(36,36,36);
-    border: 2px solid rgb(36, 36, 36);
-    border-radius: 20px;
+li {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 1.5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  background-color: rgb(36, 36, 36);
+  border: 2px solid rgb(36, 36, 36);
+  border-radius: 20px;
 }
 
-.delete{
-    text-decoration: line-through;
+.delete {
+  text-decoration: line-through;
 }
 
-.delete-btn{
-    margin-left: 1rem;
-    margin-right: 1rem;
-    padding: 0.5rem;
-    width: 8rem;
-    background-color: rgb(36,36,36);
-    border-radius: 10px;
+.delete-btn {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  padding: 0.5rem;
+  width: 8rem;
+  background-color: rgb(36, 36, 36);
+  border-radius: 10px;
 }
